stages/stage6/k8s/infra/identity-db/identity-db-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: identity-db-allow-apps
  namespace: apollo11-infra
spec:
  podSelector:
    matchLabels:
      app: identity-db
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: apollo11-apps
      ports:
        - protocol: TCP
          port: 5432
  policyTypes:
    - Ingress
